--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="row">
                 <div class="col">
                     <div class="container p-5">
-                        <a href="#" class="video" data-video="https://www.youtube.com/embed/04MgnNQPLSA" data-toggle="modal" data-target="#videoModal">
+                        <a href="#" class="video" data-video="https://www.youtube.com/watch?v=n03IDJcsy5g&list=RDn03IDJcsy5g&start_radio=1" data-toggle="modal" data-target="#videoModal">
                             <i class="fas fa-play fa-3x"></i>
                         </a>
                         <h1>See What We Do</h1>
